overflow fix

--- a/src/assets/styles/blocks/_common/nav.scss
+++ b/src/assets/styles/blocks/_common/nav.scss
@@ -13,7 +13,6 @@
   display: flex;
   justify-content: center;
   z-index: -999;
-  overflow-Y: visible;
 
   &:before,
   &:after {
@@ -37,6 +36,7 @@
 
 .nav--active {
   z-index: 999;
+  overflow-x: hidden;
   overflow-Y: scroll;
 
   @include tablets {
